--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
     <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
 
+    <string name="sponsortext">낚중일기 서비스는 회원님의 후원과 광고수익으로 운영됩니다. 지속적인 운영과 확장을 위해서 회원님들의 관심과 도움이 필요합니다.\n\n후원 회원님들께는 아이디 위에 후원뱃지를 선물로 드립니다.^^</string>
+
 <string name="useinfo_1">
         [이용약관]\n
         \n
