--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">낚중일기</string>
 
-    <string name="dwonload_url">http://www.naver.com</string>
+    <string name="dwonload_url">https://play.google.com/store/apps/details?id=com.moduse.nakk</string>
     <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
     <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
 
